[package]
name = "bnet-auth-export"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
data-encoding = "2"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
